# gzdoom-sm64

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
game-music-emu/: CMakeLists.txt
libsm64/: .gitignore  CMakeLists.txt  build.bat  clean.bat  dll2lib.bat  import-mario-geo.py
libsm64/src/: gfx_macros.h  libsm64.c  libsm64.h  load_surfaces.c
libsm64/src/decomp/: shim.h
libsm64/src/decomp/audio/: effects.h  external.c  external.h
libsm64/src/decomp/engine/: surface_collision.c  surface_collision.h
libsm64/src/decomp/game/: interaction.c  mario.c  mario.h  mario_actions_airborne.c  mario_actions_automatic.c  mario_actions_cutscene.c  mario_actions_moving.c  mario_actions_object.c  mario_actions_stationary.c  mario_actions_submerged.c  mario_step.c  rendering_graph_node.c
libsm64/src/decomp/include/: audio_defines.h  sm64shared.h  types.h
libsm64/src/decomp/pc/audio/: audio_alsa.c  audio_alsa.h  audio_pulse.c  audio_pulse.h  audio_sdl.c
libsm64/src/decomp/tools/: convUtils.c  convUtils.h
libsm64/src/sha1/: sha1.c  sha1.h
libsm64/test/: context.h  main.c
src/: CMakeLists.txt  c_cmds.cpp  d_main.cpp  d_mario.cpp  d_mario.h  d_player.h  dobjtype.cpp  earcut.hpp  g_game.cpp  g_level.cpp  g_levellocals.h  hu_scores.cpp  p_interaction.cpp  p_local.h  p_map.cpp  p_maputl.cpp  p_mobj.cpp  p_setup.cpp  p_spec.cpp  p_user.cpp  v_font.cpp  v_text.cpp  v_video.cpp  w_wad.cpp
src/g_shared/: hudmessages.cpp  shared_hud.cpp
src/g_statusbar/: sbarinfo.cpp  shared_sbar.cpp
src/gl/scene/: gl_scene.cpp  gl_sprite.cpp
src/math/: isnan.c
src/polyrenderer/math/: tri_matrix.cpp
src/r_data/: r_translate.cpp
src/scripting/: types.cpp
src/scripting/backend/: vmbuilder.cpp
src/scripting/vm/: vmframe.cpp
src/textures/: jpegtexture.cpp
src/win32/: win32gliface.cpp  zdoom.rc
tools/re2c/: CMakeLists.txt
(+2 files in other folders)
